@@ -1,3 +1,8 @@
+2008-12-31  Stefan Kost  <ensonic@users.sf.net>
+
+	* src/Makefile.am:
+	  Seems its better to use PTHREAD_CFLAGS for all targets.
+
 2008-12-30  Stefan Kost  <ensonic@users.sf.net>
 
 	* m4/acx_pthread.m4:
